[package]
name = "logix-xtask"
version = "0.1.0"
edition = "2021"
description = "helper library that provides `cargo xtask` functionality for the Logix crates."
repository = "https://github.com/logix-tool/logix-xtask"
authors = [
  "Bjørn Ove Hay Andersen <bjrnove@gmail.com>",
  "Gigantos <gigantos@gigantos.net>",
]
license = "MPL-2.0"

[dependencies]

[workspace]
members = ["xtask"]
