[package]
name = "logix-xtask"
edition = "2021"
description = "helper library that provides `cargo xtask` functionality for the Logix crates."
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.2.1"
authors = [
  "Gigantos <gigantos@gigantos.net>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/logix-tool/logix-xtask"
